HLStats ChangeLog
=================

1.64 (TBA)
*) Fixed: missing SQL statement for the PlayerAttackedPlayer table
	Thx to kimaki
*) New: CS:GO support

1.63 (2012-07-12)
*) New: skype field in player table. hls_set skype from ingame #16
*) New: steam achievements are shown at the games which have steam stats
	curl modul for php is needed
*) New: New style sheet 'rounded'
*) New: New style sheet 'grey'
*) New: Player attacked Player events are now recorded.
*) New: GoldenEye: Source gamesupport
*) New: Left for dead 2 gamesupport
*) New: Players timeline
*) Update: Using PHP mysqli extension now.
*) Update: L4D, Hidden and other gamesupport files.
*) Update: Server add-ons list
*) Update: some interface changes
*) Web interface (PHP) uses the MySQLi extension now
*) Works with Perl 5.12.4, MySQL 5.1.16
*) Fixed: Player not tracked if NON-Steam server is used ;-)
		Uses NOSTEAM_ in uniqueid
*) Fixed: timestamp option was not used correctly.
*) Fixed: deleted lastUpdate column from player table. is now replaced with
	skillchangeDate
*) Fixed: players count per day
*) Fixed: Possible fix for server view. Variable was a string
*) Fixed: Sort did not work in player chat history table
*) Changed: L4D improvements. zombies are now handled as BOT to clear up
	the stats
*) Closed: #14
*) Closed: #15
*) Closed: #39
*) Close: #18

1.62 (2011-05-18)
*) New: Design styles (css) updated.
*) New: Zombie Panic! Source had no weapon pics
*) New: Most time online chart at player overview. Needs serverplugin
	which provides time info ( eg. AMX Mod X statsplugin )
*) New: Game reset by server or all
*) New: Command line argument -q|--quiet will surpress all output
	Useful for cron jobs
*) Changed: New Rank section in player detail page. #37
*) Updated: blue.css and default.css small design changes
*) Updated: weapon and map pictures
*) Fixed: old weapon images converted to png
*) Fixed: #34
*) Fixed: number format error in player detail page
*) Fixed: #36
*) Fixed: #4
*) Closed: #24
